--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-    background-color: #F1ECC3;
+  background-color: #f1ecc3;
 }
 
 a {
-    color: #A03C78;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 100px;
+  color: #a03c78;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 100px;
 }
